[workspace]
members = [
  "nres",
  "tcp",
  "unix",
  "serial",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/katyo/unicom"
homepage = "https://github.com/katyo/unicom"

[workspace.dependencies]
url = "2"
log = "0.4"
futures-io = "0.3"
futures-util = "0.3"
tokio = "1"
async-std = "1"
c-ares-resolver = "8"
async-std-resolver = "0.24"
tokio-serial = "5"
unicom.path = ""
unicom-nres.path = "nres"

[package]
name = "unicom"
description = "Unified communication for IoT clients"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["iot", "devices", "communication"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies]
url.workspace = true
log.workspace = true

[dependencies.futures-io]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true

[dependencies.async-std]
workspace = true
optional = true

[features]
futures = ["futures-io"]
rustdoc = ["futures"]
