[package]
name = "unicom-nres"
description = "Unified domain-name to IP address resolver"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["unicom", "dns", "resolver", "domain"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies]
unicom.workspace = true

[dependencies.futures-util]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
features = ["net"]
optional = true

[dependencies.c-ares-resolver]
workspace = true
optional = true

[dependencies.async-std-resolver]
workspace = true
optional = true

[dev-dependencies.tokio]
workspace = true
features = ["macros"]

[dev-dependencies.async-std]
workspace = true
features = ["attributes"]

[features]
tokio = ["dep:tokio", "unicom/tokio"]
async-std = ["async-std-resolver", "unicom/async-std"]
c-ares = ["c-ares-resolver", "futures-util", "unicom/futures"]
rustdoc = ["async-std"]
