[package]
name = "unicom-nres"
description = "Unified domain-name to IP address resolver"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["unicom", "dns", "resolver", "domain"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies]
unicom.workspace = true

[dependencies.futures-util]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
features = ["net"]
optional = true

[dependencies.async-net]
workspace = true
optional = true

[dev-dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[dev-dependencies]
smol.workspace = true
smol-macros.workspace = true
macro_rules_attribute.workspace = true

[features]
tokio = ["dep:tokio", "unicom/tokio"]
async = ["async-net", "unicom/async"]
rustdoc = ["tokio"]
