[package]
name = "unicom-serial"
version = "0.2.0"
description = "Serial port backend for unicom."
keywords = ["unicom", "serial", "port", "iot"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
repository = "https://github.com/katyo/unicom"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies.unicom]
version = "0.2.0"
path = ".."

[dependencies.tokio-serial]
version = "5"
default-features = false
optional = true

[features]
tokio = ["tokio-serial", "unicom/tokio"]
async-std = ["unicom/async-std"]
libudev = ["tokio-serial/libudev"]
rustdoc = ["tokio"]
