[package]
name = "unicom-serial"
description = "Serial port backend for unicom."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["unicom", "serial", "port", "iot"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies]
unicom.workspace = true

[dependencies.tokio-serial]
workspace = true
optional = true

[features]
tokio = ["tokio-serial", "unicom/tokio"]
async = ["unicom/async"]
libudev = ["tokio-serial/libudev"]
rustdoc = ["tokio"]
