[package]
name = "unicom-tcp"
version = "0.2.0"
description = "TCP socket backend for unicom."
keywords = ["unicom", "tcp", "socket", "iot"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
repository = "https://github.com/katyo/unicom"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies.unicom]
version = "0.2.0"
path = ".."

[dependencies.unicom-nres]
version = "0.2.0"
path = "../nres"

[dependencies.tokio-rs]
package = "tokio"
version = "^1"
features = ["net"]
optional = true

[dependencies.async-std-rs]
package = "async-std"
version = "1"
optional = true

[dev-dependencies.tokio-rs]
package = "tokio"
version = "1"
features = ["rt", "io-util", "macros"]

[dev-dependencies.async-std-rs]
package = "async-std"
version = "1"
features = ["attributes"]

[features]
tokio = ["tokio-rs", "unicom/tokio", "unicom-nres/tokio"]
async-std = ["async-std-rs", "unicom/async-std", "unicom-nres/async-std"]
rustdoc = ["async-std"]
