[package]
name = "unicom-tcp"
description = "TCP socket backend for unicom."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["unicom", "tcp", "socket", "iot"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies]
unicom.workspace = true
unicom-nres.workspace = true

[dependencies.tokio]
workspace = true
features = ["net"]
optional = true

[dependencies.async-std]
workspace = true
optional = true

[dev-dependencies.tokio]
workspace = true
features = ["rt", "io-util", "macros"]

[dev-dependencies.async-std]
workspace = true
features = ["attributes"]

[features]
tokio = ["dep:tokio", "unicom/tokio", "unicom-nres/tokio"]
async-std = ["dep:async-std", "unicom/async-std", "unicom-nres/async-std"]
rustdoc = ["async-std"]
