[package]
name = "unicom-tcp"
description = "TCP socket backend for unicom."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["unicom", "tcp", "socket", "iot"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies]
unicom.workspace = true
unicom-nres.workspace = true

[dependencies.tokio]
workspace = true
features = ["net"]
optional = true

[dependencies.async-net]
workspace = true
optional = true

[dev-dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "io-util", "macros"]

[dev-dependencies]
smol.workspace = true
smol-macros.workspace = true
macro_rules_attribute.workspace = true

[features]
tokio = ["dep:tokio", "unicom/tokio", "unicom-nres/tokio"]
async = ["dep:async-net", "unicom/async", "unicom-nres/async"]
rustdoc = ["tokio"]
