[package]
name = "unicom-nres"
version = "0.1.1"
description = "Unified domain-name to IP address resolver"
keywords = ["unicom", "dns", "resolver", "domain"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
repository = "https://github.com/katyo/unicom"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["rustdoc"]

[badges.travis-ci]
repository = "katyo/unicom"

[dependencies.futures-util]
version = "^0.3"
optional = true

[dependencies.unicom]
version = "^0.1"
path = "../unicom"

[dependencies.tokio-rs]
package = "tokio"
version = "^0.2"
features = ["dns"]
optional = true

[dependencies.c-ares-resolver]
version = "^7"
optional = true

[dependencies.async-std-resolver]
version = "^0.19"
optional = true

[dev-dependencies.tokio-rs]
package = "tokio"
version = "^0.2"
features = ["macros"]

[dev-dependencies.async-std-rs]
package = "async-std"
version = "^1"
features = ["attributes"]

[features]
tokio = ["tokio-rs", "unicom/tokio"]
async-std = ["async-std-resolver", "unicom/async-std"]
c-ares = ["c-ares-resolver", "futures-util", "unicom/futures"]
rustdoc = ["async-std"]
