[package]
name = "unicom-tcp"
version = "0.1.0"
description = "TCP socket backend for unicom."
keywords = ["unicom", "tcp", "socket", "iot"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
repository = "https://github.com/katyo/unicom"
readme = "README.md"
edition = "2018"

[badges.travis-ci]
repository = "katyo/unicom"

[dependencies.unicom]
version = "0.1.0"
path = "../unicom"

[dependencies.unicom-nres]
version = "0.1.0"
path = "../unicom-nres"

[dependencies.tokio-rs]
package = "tokio"
version = "^0.2"
features = ["tcp"]
optional = true

[dependencies.async-std-rs]
package = "async-std"
version = "^1"
optional = true

[features]
tokio = ["tokio-rs", "unicom/tokio"]
async-std = ["async-std-rs", "unicom/async-std"]
