[package]
name = "unicom-tcp"
version = "0.1.1"
description = "TCP socket backend for unicom."
keywords = ["unicom", "tcp", "socket", "iot"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
repository = "https://github.com/katyo/unicom"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["rustdoc"]

[badges.travis-ci]
repository = "katyo/unicom"

[dependencies.unicom]
version = "^0.1"
path = "../unicom"

[dependencies.unicom-nres]
version = "^0.1"
path = "../unicom-nres"

[dependencies.tokio-rs]
package = "tokio"
version = "^0.2"
features = ["tcp"]
optional = true

[dependencies.async-std-rs]
package = "async-std"
version = "^1"
optional = true

[dev-dependencies.tokio-rs]
package = "tokio"
version = "^0.2"
features = ["rt-core", "io-util", "macros"]

[dev-dependencies.async-std-rs]
package = "async-std"
version = "^1"
features = ["attributes"]

[features]
tokio = ["tokio-rs", "unicom/tokio", "unicom-nres/tokio"]
async-std = ["async-std-rs", "unicom/async-std", "unicom-nres/async-std"]
rustdoc = ["async-std"]
