[package]
name = "unicom"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.url]
version = "^2"

[dependencies.log]
version = "^0.4"
#optional = true

[dependencies.futures-io]
version = "^0.3"
optional = true

[dependencies.tokio]
version = "^0.2"
optional = true

[dependencies.async-std]
version = "^1"
optional = true

[features]
default = ["futures"]
futures = ["futures-io"]
