[package]
name = "unicom"
version = "0.1.0"
description = "Unified communication for IoT clients"
keywords = ["iot", "devices", "communication"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
repository = "https://github.com/katyo/unicom"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["rustdoc"]

[badges.travis-ci]
repository = "katyo/unicom"

[dependencies.url]
version = "^2"

[dependencies.log]
version = "^0.4"

[dependencies.futures-io]
version = "^0.3"
optional = true

[dependencies.tokio]
version = "^0.2"
optional = true

[dependencies.async-std]
version = "^1"
optional = true

[features]
futures = ["futures-io"]
rustdoc = ["futures"]
