[package]
name = "unicom-unix"
version = "0.1.1"
description = "Unix domain socket backend for unicom."
keywords = ["unicom", "unix", "socket", "iot"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
repository = "https://github.com/katyo/unicom"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies.unicom]
version = "0.1"
path = ".."

[dependencies.tokio-rs]
package = "tokio"
version = "1"
features = ["net"]
optional = true

[dependencies.async-std-rs]
package = "async-std"
version = "1"
optional = true

[features]
tokio = ["tokio-rs", "unicom/tokio"]
async-std = ["async-std-rs", "unicom/async-std"]
rustdoc = ["async-std"]
