[package]
name = "unicom-unix"
description = "Unix domain socket backend for unicom."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["unicom", "unix", "socket", "iot"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies]
unicom.workspace = true

[dependencies.tokio]
workspace = true
features = ["net"]
optional = true

[dependencies.async-std]
workspace = true
optional = true

[features]
tokio = ["dep:tokio", "unicom/tokio"]
async-std = ["dep:async-std", "unicom/async-std"]
rustdoc = ["async-std"]
